# sdfer-prototype

./: Cargo.toml  README.md  pretty.json
fonts/: arial.arfont  arial_data.arfont  arial_data.json  gigi.fnt
src/: blit.wgsl  cheap.wgsl  expensive_premultiplied.wgsl  less_expensive.wgsl  less_expensive_premultiplied.wgsl  main.rs  shader.wgsl  shaderms.wgsl  shaderold.wgsl  shadertest.wgsl
